# DSPYNQ

./: README.md
board_files/: PYNQ supported boards and PYNQ pre-built images - PYNQ.url
hosts/zybo-z7020/: run_daemon.sh
hosts/zybo-z7020/python/: base_led_blinker.py  dsp_daemon.py
hosts/zybo-z7020/python/modules/base/: base.bit  base.hwh  base.py
hosts/zybo-z7020/python/modules/scope/: scope.bit  scope.hwh  scope.py
hosts/zybo-z7020/python/poc/: GPIOs_test.ipynb  base_led_blinker.py  overlay_dive.ipynb  overlay_dive.tex  scope_test.ipynb  test_adder.py  thread.py
vitis/dsp_alu/: dsp_alu.cpp
vitis/kalman_filter_1d/: kalman.cpp  kalman.h  kalman_test_bench.cpp
vivado/IP/dsp_alu/: component.xml
vivado/IP/dsp_alu/hdl/verilog/: dsp_alu.v  dsp_alu_control_s_axi.v  dsp_alu_flow_control_loop_delay_pipe.v  dsp_alu_gmem0_m_axi.v  dsp_alu_gmem1_m_axi.v  dsp_alu_gmem2_m_axi.v  dsp_alu_mac_muladd_16s_16s_32ns_32_4_1.v  dsp_alu_mul_16s_16s_32_1_1.v
vivado/IP/dsp_alu/hdl/vhdl/: dsp_alu_control_s_axi.vhd  dsp_alu_gmem1_m_axi.vhd  dsp_alu_gmem2_m_axi.vhd  dsp_alu_mac_muladd_16s_16s_32ns_32_4_1.vhd
vivado/IP/export/: component.xml
vivado/IP/export/hdl/verilog/: kalman_filter.v  (+8 more)
vivado/IP/kalman_filter/: component.xml
vivado/IP/kalman_filter/drivers/kalman_filter_v1_0/src/: CMakeLists.txt  Makefile  xkalman_filter.c  xkalman_filter.h  xkalman_filter_hw.h  xkalman_filter_linux.c  xkalman_filter_sinit.c
vivado/base/: Zybo-Z7-Master.xdc  bd_base_wrapper.xsa
vivado/base/bd/bd_base/: bd_base.bd  bd_base.bda
vivado/base/vhdl/: nanosecond_counter.vhd
(+103 files in other folders)
